install dependencies. add header/footer, crate 4 pages and navigation. start grid

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,33 +1,100 @@
 body {
   margin: 0;
+  font-family: $font-family-sans-serif;
+  background-color: $llava-bg;
+}
+
+header, footer {
+  background-color: $llava-corporate;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: white
+}
+
+a:hover {
+  text-decoration: none;
+  color: white
+}
+
+.body {
+  max-width: 1264px;
+  margin: auto;
+}
+
+//============================//
+//LOGO
+//============================//
+.logo__img {
+  height: 32px;
+  width: 22px;
+}
+
+//============================//
+//Social links
+//============================//
+.social__img {
+  height: 22px;
+  width: 22px;
+}
+
+.social__img--facebook {
+  height: 29px;
+  width: 29px;
+}
+
+//============================//
+//Info Row (Header and footer row)
+//============================//
+.info-row__link {
+  color: white;
+}
+
+.info-row__link:hover .info-row__text{
+  color: white;
+  border-bottom: #ffd199 solid 4px;
+}
+
+.info-row__link--selected .info-row__text,
+.info-row__link--selected:hover .info-row__text{
+  border-bottom: darkorange solid 4px;
 }
 
 
-.box1 {background:red}
-.box2 {background:blue}
-.box3 {background:orange}
-.box4 {background:yellow}
-.box5 {background:purple}
-.box6 {background:black}
-.box7 {background:green}
-.box8 {background:brown}
-.box9 {background:pink}
-.box10 {background:darkorange}
+//============================//
+// GRID CSS Home Page
+//============================//
 
-.container {
+.grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 20px;
-  border: 10px solid black;
-
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  font-size: 30px;
+  text-align: center;
+  position: relative;
 }
 
-.box9{
-  grid-column: span 2;
+.grid-item__image {
+  width: 100%;
 }
 
-.box {
+.grid-item__info {
+  background-color: rgba(0,0,0,0.8);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  //display: none;
+  color: white;
+}
 
-
+.grid-item:hover .grid-item__info--hovershow {
+  display: block;
 }
 
