--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,9 @@
 
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
+@import "@fortawesome/fontawesome-free/css/all.css";
+@import "bootstrap/dist/css/bootstrap.css";
+
 
 /**
  * Import layouts
