--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,9 +12,18 @@
 
 // @import "some-node-module";
 // @import "@some-company/some-node-module";
-@import "@fortawesome/fontawesome-free/css/all.css";
-@import "bootstrap/dist/css/bootstrap.css";
 
+$grid-breakpoints: (
+  xs: 0,
+  sm: 340px,
+  md: 576px,
+  lg: 768px,
+  xl: 992px
+);
+
+@import "@fortawesome/fontawesome-free/css/all.css";
+@import "node_modules/bootstrap/scss/bootstrap";
+//@import "bootstrap/dist/css/bootstrap.css";
 
 /**
  * Import layouts
