--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -198,11 +198,11 @@ a:hover {
 .famous-list {
   padding-left: 32px;
 
-  &li {
+  & li {
     list-style: none;
   }
 
-  &.famous-list__person::before {
+  & .famous-list__person::before {
     content: '';
     display: inline-block;
     height: 32px;
@@ -211,15 +211,15 @@ a:hover {
     background-size: 32px;
   }
 
-  &.famous-list__person--benedict::before {
-    background-image: url('./../images/benedict.jpg');
+  & .famous-list__person--benedict::before {
+    background-image: url('./../images/benedict.png');
   }
 
-  &.famous-list__person--pierre::before {
+  & .famous-list__person--pierre::before {
     background-image: url('./../images/pierreoriola.jpeg');
   }
 
-  &.famous-list__person--nia::before {
+  & .famous-list__person--nia::before {
     background-image: url('./../images/nia.jpg');
   }
 }
